--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
         run: |
           mypy ./musc.py
           python ./test.py -t
-          python ./test.py -f ./examples/
+          python ./test.py -f ./examples/ -t
