Update big changes, new lang name `Skorpio`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,6 @@ jobs:
           pip install mypy
       - name: run tests
         run: |
-          mypy ./musc.py
+          mypy ./skorpio.py
           python ./test.py -t
           python ./test.py -f ./examples/ -t
