--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,20 +5,20 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
-      - name: install dependencies
+      - name: install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -qq nasm
+          sudo apt-get install -qq nasm gcc cmake g++
       - uses: actions/setup-python@v2
         with:
           python-version: 'pypy-3.7'
           architecture: x64
-      - name: install dependencies
+      - name: install python dependencies
         run: |
-          pip install mypy
+          pip3 install mypy
       - name: run tests
         run: |
           mypy ./skorpio.py
           mypy ./test.py
-          python ./test.py -t
-          python ./test.py -f ./examples/ -t
+          python3 ./test.py -t
+          python3 ./test.py -f ./examples/ -t
