--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - name: install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -qq nasm gcc cmake g++
+          sudo apt-get install -qq nasm pypy3
       - uses: actions/setup-python@v2
         with:
           python-version: 'pypy-3.7'
