--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,5 @@ jobs:
         run: |
           mypy ./skorpio.py
           mypy ./test.py
-          python3 ./test.py -t
-          python3 ./test.py -f ./examples/ -t
+          pypy3 ./test.py -t
+          pypy3 ./test.py -f ./examples/ -t
